# protos

./: .protolint.yaml  BUILD.bazel  README.md  WORKSPACE  buf.yaml
.github/workflows/: buf-ci.yml
bazel/: BUILD.bazel  common_rules.bzl
common/enums/: BUILD.bazel  ext_user_source.proto
common/models/: BUILD.bazel  user.proto
script/: BUILD.bazel  script_service.proto
script/models/: BUILD.bazel
scripts/: BUILD.bazel  README.md  script_service.proto
scripts/enums/: BUILD.bazel  character_state.proto  character_type.proto  script_camera_position.proto  script_scene_position.proto  script_type.proto  speaker_voice_type.proto
scripts/enums/v1/: character_state.proto  character_type.proto  ext_user_source.proto  llm_model.proto  script_camera_position.proto  script_generation_status.proto  script_type.proto  speaker_voice_type.proto
scripts/events/: BUILD.bazel  generate_script_event.proto  show_script_event.proto
scripts/events/v1/: BUILD.bazel  generate_script_event.proto  script_generation_status_event.proto  show_script_event.proto
scripts/models/: BUILD.bazel  script.proto  script_guest_character.proto  show_script_line.proto
scripts/models/v1/: BUILD.bazel  prompt_template.proto  prompt_template_key.proto  script.proto  script_content_line.proto  script_guest_character.proto  show_script_line.proto  user.proto
scripts/services/v1/: BUILD.bazel  script_service.proto  template_service.proto
