load("@com_github_grpc_grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("//bazel:common_rules.bzl", "service_proto_export")

package(default_visibility = ["//visibility:public"])

service_proto_export(
    "script",
    srcs = glob(["**/*.proto"]),
    proto_deps = ["//script/models:script_model_proto"],
)
