load("//bazel:common_rules.bzl", "service_proto_export")

package(default_visibility = ["//visibility:public"])

service_proto_export(
    "script_service",
    srcs = glob(["*.proto"]),
    proto_deps = [
        "//scripts/events/v1:script_event_proto",
        "//scripts/models/v1:script_model_proto",
    ],
)
